--- a/bista_stock_remarks/views/purchase_order.xml
+++ b/bista_stock_remarks/views/purchase_order.xml
@@ -11,7 +11,7 @@
                     <group colspan="4">
                         <field name="special_pick_note"
                                class="oe-bordered-editor" nolabel="1"
-                               placeholder="Special Picking Notes..."
+                               placeholder="Notes..."
                                required="1"/>
                     </group>
                 </group>
