--- a/bista_purchase/report/purchase_order.xml
+++ b/bista_purchase/report/purchase_order.xml
@@ -304,7 +304,7 @@
             <t t-if="o.special_pick_note">
                 <div class='row mt-4'>
                     <div class="col-12" style="margin-left: 5px; margin-bottom: 20px; ">
-                        <strong>Special Instructions and Notes</strong>
+                        <strong>Notes</strong>
                         <p t-field="o.special_pick_note"
                            style="border-top: 1px solid black; margin-top: 1px;"/>
                     </div>
