[IMP]  In Feature #18074 Alert notification of when BO is past due on restock date
(cherry picked from commit 6d323c46a529c5308188b84439d63b4c6e9637f3)

--- a/bista_purchase/views/stock_picking_views.xml
+++ b/bista_purchase/views/stock_picking_views.xml
@@ -43,6 +43,11 @@
                 <attribute name="confirm">Please check your carrier details. 
                 Are you sure with the carrier details?</attribute>          
             </xpath>
+            <xpath expr="//field[@name='date_deadline']" position="attributes">
+                <attribute name="readonly">0</attribute>
+                <attribute name="attrs">{'invisible': ['|', ('state', 'in', ('cancel')),
+                ('date_deadline', '=', False)],'readonly': [('state', '=', 'done')]} </attribute>
+            </xpath>
         </field>
     </record>
     <record model="ir.ui.view" id="stock_view__quant_tree_editable_inherit">
