--- a/bista_purchase/report/purchase_order.xml
+++ b/bista_purchase/report/purchase_order.xml
@@ -38,8 +38,9 @@
                     </t>
                 </div>
                 <t t-set="report_info" class="col-6 text-right mb4">
-                    <h3 t-if="o.state != 'cancel'">Approved Order</h3>
+                    <h3 t-if="o.state not in ['cancel','reject']">Approved Order</h3>
                     <h3 t-if="o.state == 'cancel'">Cancelled Purchase Order/Approved Order</h3>
+                    <h3 t-if="o.state == 'reject'">Rejected Purchase Order/Approved Order</h3>
                     <h4>
                         <strong>
                             <t t-esc="o.name"/>
