--- a/bista_purchase/report/report_templates.xml
+++ b/bista_purchase/report/report_templates.xml
@@ -14,8 +14,9 @@
                         <div t-if="xmlid == 'purchase.report_purchaseorder'" name="report_info"
                              class="col-6 text-right mb4">
                             <!--                            <h3 t-if="o.state in []">Request for Quotation</h3>-->
-                            <h3 t-if="o.state in ['draft','sent','purchase','done']">Purchase Order</h3>
+                            <h3 t-if="o.state not in ['cancel','reject']">Purchase Order</h3>
                             <h3 t-if="o.state == 'cancel'">Cancelled Purchase Order/Approved Order</h3>
+                            <h3 t-if="o.state == 'reject'">Rejected Purchase Order/Approved Order</h3>
                             <h4>
                                 <strong>
                                     <t t-esc="o.name"/>
@@ -31,9 +32,11 @@
                         </div>
                         <div t-if="xmlid == 'purchase.report_purchasequotation'" name="report_info"
                              class="col-6 text-right mb4">
-                            <h3 t-if="o.state in ['draft','sent','purchase','done']">Request for Quotation</h3>
+                            <!-- <h3 t-if="o.state in ['draft','sent','purchase','done']">Request for Quotation</h3> -->
+                            <h3 t-if="o.state not in ['cancel','reject']">Purchase Order</h3>
                             <!--                            <h3 t-if="o.state in []">Purchase Order</h3>-->
                             <h3 t-if="o.state == 'cancel'">Cancelled Purchase Order/Approved Order</h3>
+                            <h3 t-if="o.state == 'reject'">Rejected Purchase Order/Approved Order</h3>
                             <h4>
                                 <strong>
                                     <t t-esc="o.name"/>
