[ADD] - Feature #18857 - adding field of product use in sale quotation
(cherry picked from commit 74891e68878a7be77e5fe284ff201beb5aa46a81)

--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -106,6 +106,7 @@
                                 <field name="order_notes" class="bp_text_field"/>
                                 <field name="gorgias_ticket" widget="url" class="bp_text_field"/>
                                 <field name="product_status_notes" class="bp_text_field"/>
+                                <field name="product_use" class="bp_text_field"/>
                             </group>
                             <group>
                                 <field name="white_glove_id"/>
