[ADD] - Feature #18839 Need by date display in red color in PO report
(cherry picked from commit ee64dee23d9cafc8b770ef3b874419f3bbcc0b17)

--- a/bista_purchase/report/purchase_quotation.xml
+++ b/bista_purchase/report/purchase_quotation.xml
@@ -78,9 +78,11 @@
                         </t> -->
                         <!-- <t t-if="xmlid == 'purchase.report_purchaseorder' and o.state not in ['draft','sent']"> -->
                         <t t-if="o.need_by_date">
-                            <strong>Order Need By Date:</strong>
-                            <t t-esc="o.need_by_date" t-options='{"widget": "date"}'/>
-                            <br/>
+                            <div class="text-danger">
+                                <strong>Order Need By Date:</strong>
+                                <t t-esc="o.need_by_date" t-options='{"widget": "date"}'/>
+                                <br/>
+                            </div>
                         </t>
                         <!-- <t t-elif="xmlid == 'purchase.report_purchasequotation' and o.state not in ['draft','sent']">
                             <strong>Purchase Order Date:</strong>
