--- a/bista_cc_email_feature/wizard/mail_compose_views.xml
+++ b/bista_cc_email_feature/wizard/mail_compose_views.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="mail.email_compose_message_wizard_form"/>
         <field name="arch" type="xml">
             <field name="subject" position="before">
-                <field name="cc_partner_ids" string="CC Emails" widget="many2many_tags_email" context="{'force_email': True, 'show_email': True}" />
+                <field name="cc_partner_ids" string="CC Emails" widget="many2many_tags_email" context="{'force_email': True, 'show_email': True, 'cc_parent_ids': partner_ids}" />
             </field>
         </field>
     </record>
