[IMP] Feature #18564 - added currency on cover, quote price & saving amount

--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -15,13 +15,13 @@
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="attributes">
                 <attribute name="string">Cover Price</attribute>
                 <attribute name="optional">show</attribute>
+                <attribute name="readonly">1</attribute>
+                <attribute name="force_save">1</attribute>
+                <attribute name="widget">monetary</attribute>
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="after">
-                <field name="discounted_price" optional="show"/>
-                <field name="saving_amount" optional="show" readonly="1"/>
-            </xpath>
-            <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="attributes">
-                <attribute name="readonly">1</attribute>
+                <field name="discounted_price" optional="show" widget="monetary" />
+                <field name="saving_amount" optional="show" readonly="1" widget="monetary" />
             </xpath>
             <field name="tax_totals_json" position="after">
                 <field style="font-size: 1.3em; font-weight: bold;" name="saving_amount" readonly="1"/>
