--- a/bigcommerce_odoo_integration/views/res_partner.xml
+++ b/bigcommerce_odoo_integration/views/res_partner.xml
@@ -14,10 +14,16 @@
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
+                <xpath expr="//form//sheet" position="before">
+                    <header>
+                        <button type="object" name="export_customer_to_bigcommerce" string="Export Customer To Bigcommerce" class="btn btn-outline-primary"
+                            attrs="{'invisible':[('bigcommerce_customer_id','!=',False)]}"/>
+                    </header>
+                </xpath>
                 <xpath expr="//page[last()]" position="after">
                     <page name="bigcommerce_info" string="BigCommerce Info">
                         <group>
-                            <field name="bigcommerce_store_id" readonly="1"/>
+                            <field name="bigcommerce_store_id" readonly="0"/>
                             <field name="bigcommerce_customer_id"/>
                             <field name="is_available_in_bigcommerce" readonly="1"/>
                             <field name="bigcommerce_customer_group_id" />
