[FIX]- Bug #18899 - Change the label of multi shipment to shipment plan

--- a/bista_sale_multi_ship/views/sale_order_view.xml
+++ b/bista_sale_multi_ship/views/sale_order_view.xml
@@ -50,7 +50,7 @@
                     <field name="supplier_id" context="{'vendor_product_id': product_id}" attrs="{'readonly': [('state', '!=', 'draft')]}" optional="show"/>
                  </xpath>
                 <xpath expr="//page[last()]" position="after">
-                    <page name="shipping_lines" string="Shipping"
+                    <page name="shipping_lines" string="Shipment Plan"
                           attrs="{'invisible': ['|', ('split_shipment', '=', False), ('id', '=', False)]}">
                         <!-- <div>
                             <group>
