[IMP]Updated module from vraja for customer export and publication date with date type format.
(cherry picked from commit a97d07b2c701a834f86c119be983f98a42963835)

--- a/bigcommerce_odoo_integration/views/menuitem.xml
+++ b/bigcommerce_odoo_integration/views/menuitem.xml
@@ -51,6 +51,9 @@
         <menuitem id="menu_bigcommerce_product_brand" name="Product Brand"
                   parent="bigcommerce_odoo_integration_store_menuitem" sequence="10"
                   action="action_bigcommerce_product_brand"/>
+        <menuitem id="menu_bigcommerce_payment_journal" name="Payment Gateway"
+                  parent="bigcommerce_odoo_integration_store_menuitem" sequence="10"
+                  action="action_bigcommerce_payment_journal"/>
 
     </data>
 </odoo>
