--- a/bigcommerce_odoo_integration/views/res_partner.xml
+++ b/bigcommerce_odoo_integration/views/res_partner.xml
@@ -32,6 +32,13 @@
                 </xpath>
             </field>
         </record>
-
+       <!-- <record id="action_server_module_immediate_install" model="ir.actions.server">
+            <field name="name">Export Customers To BigCommerce</field>
+            <field name="type">ir.actions.server</field>
+            <field name="model_id" ref="model_res_partner" />
+            <field name="binding_model_id" ref="model_res_partner" />
+            <field name="state">code</field>
+            <field name="code">records.export_customer_to_bigcommerce()</field>
+        </record>-->
     </data>
 </odoo>
