[IMP]Improved bigcommerce order filter.
(cherry picked from commit 9b4f1a79a2f66ef2dcfd3ede6822921fc0aabacd)

--- a/bista_bigcommerce_extend/views/sale_order_view.xml
+++ b/bista_bigcommerce_extend/views/sale_order_view.xml
@@ -33,7 +33,7 @@
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_sales_order_filter"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='order_line']" position="after">
+                <xpath expr="//field[@name='name']" position="after">
                     <field name="big_commerce_order_id"/>
                     <field name="bigcommerce_shipment_order_status"/>
                 </xpath>
