--- a/bista_crm/views/crm_lead_views.xml
+++ b/bista_crm/views/crm_lead_views.xml
@@ -147,6 +147,12 @@
                     </group>
                 </page>
             </xpath>
+            <xpath expr="//group[@name='lead_partner']//field[@name='partner_id']" position="attributes">
+                <attribute name="context">{'default_name': contact_name, 'default_title': title,'default_street': street, 'default_street2': street2,'default_city': city, 'default_state_id': state_id, 'default_zip': zip,'default_country_id': country_id, 'default_function': function, 'default_phone': phone,'default_mobile': mobile,'default_email': email_from,'default_user_id': user_id,'default_team_id': team_id,'default_website': website,'show_vat': True, 'default_property_delivery_carrier_id': carrier_id}</attribute>
+            </xpath>
+            <xpath expr="//group[@name='opportunity_partner']//field[@name='partner_id']" position="attributes">
+                <attribute name="context">{'default_name': contact_name, 'default_title': title,'default_street': street, 'default_street2': street2,'default_city': city, 'default_state_id': state_id, 'default_zip': zip,'default_country_id': country_id, 'default_function': function, 'default_phone': phone,'default_mobile': mobile,'default_email': email_from,'default_user_id': user_id,'default_team_id': team_id,'default_website': website,'show_vat': True, 'default_property_delivery_carrier_id': carrier_id}</attribute>
+            </xpath>
         </field>
     </record>
     <record id="special_pricing_type_form_view" model="ir.ui.view">
