--- a/bista_purchase/views/purchase_tracking_views.xml
+++ b/bista_purchase/views/purchase_tracking_views.xml
@@ -30,8 +30,8 @@
                         <page name="trackings" string="Trackings">
                             <field name="tracking_ref_ids" nolabel="1" attrs="{'readonly': [('is_read_only', '=', True)]}">
                                 <tree editable="bottom">
-                                    <field name="name" />
-                                    <field name="tracking_url" widget="url" />
+                                    <field name="name" required="1" />
+                                    <field name="tracking_url" widget="url" required="1" />
                                 </tree>
                             </field>
                         </page>
