--- a/bista_purchase/report/account_move.xml
+++ b/bista_purchase/report/account_move.xml
@@ -10,7 +10,7 @@
             <div class="page ">
                 <div t-set="address">
                     <span>
-                        <strong>BILL To</strong>
+                        <strong>BILL To Address</strong>
                     </span>
                     <t t-if="o.partner_id.parent_id.name">
                         <div>
@@ -36,7 +36,7 @@
                 <t t-set="information_block" >
                     <t t-if="o.move_type == 'out_invoice'">
                     <div name="shipping_address_block">
-                        <strong>Shipping Address:</strong>
+                        <strong>Ship To Address</strong>
                         <t t-if="o.partner_shipping_id.parent_id.name">
                             <div>
                                 <span t-field="o.partner_shipping_id.name"/>
@@ -44,7 +44,7 @@
                                 <span t-field="o.partner_shipping_id.parent_id.name"/>
                             </div>
                             <div t-field="o.partner_id"
-                                 t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": True, "phone_icons": True}'/>
+                                 t-options='{"widget": "contact", "fields": ["address"], "no_marker": True, "phone_icons": True}'/>
                         </t>
                         <t t-else="">
                             <div t-field="o.partner_shipping_id"
@@ -100,6 +100,11 @@
                         </t>
                         <t t-if="o.move_type == 'out_invoice' and o.state == 'posted'">
                             <strong>Invoice Date:</strong>
+                            <t t-esc="o.create_date" t-options='{"widget": "date"}'/>
+                            <br/>
+                        </t>
+                        <t t-if="o.move_type == 'out_invoice' and o.state == 'posted'">
+                            <strong>Invoice Due Date:</strong>
                             <t t-esc="o.invoice_date_due" t-options='{"widget": "date"}'/>
                             <br/>
                         </t>
@@ -198,13 +203,13 @@
                 <t t-if="o.move_type == 'out_invoice'">
                     <td class="text-right" name="td_cover"
                         style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
-                        <span t-field="line.sale_line_ids.discounted_price"/>
+                        <span t-field="line.sale_line_ids.discounted_price" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                     </td>
                 </t>
                 <t t-if="o.move_type == 'in_invoice'">
                     <td class="text-right" name="td_cover"
                         style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
-                        <span t-field="line.price_unit"/>
+                        <span t-field="line.price_unit" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                     </td>
                     <td class="text-right" name="td_discount"
                         style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
@@ -214,7 +219,7 @@
                     </td>
                     <td class="text-right text-danger" name="td_bp_price"
                         style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
-                        <span t-field="line.purchase_line_id.disc_price_unit"/>
+                        <span t-field="line.purchase_line_id.disc_price_unit" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                     </td>
                 </t>
                 <td t-attf-class="text-left {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}"
@@ -283,7 +288,7 @@
                     </tr>
                     <tr style="background-color: #f56343;">
                         <td style="border-top: 1px solid black; border-left: 1px solid black; border-right: 1px solid black; padding-left:10px;">
-                            <strong class="border-black o_subtotal;text-right">Total</strong>
+                            <strong class="border-black o_subtotal;text-right">Total Due</strong>
                         </td>
                         <td style="border-top: 1px solid black; padding-left:10px;padding-right:8px;"
                             class="text-right">
@@ -293,13 +298,21 @@
                 </table>
             </div>
         </xpath>
-
+        <xpath expr="//p[@name='payment_term']" position="before">
+            <div class="mt-5 mx-0" t-if="o.invoice_pick_note">
+                <strong >Notes</strong>
+                <p class="mb-1" t-field="o.invoice_pick_note" style="border-top: 1px solid black; margin-top: 1px;"/>
+            </div>
+        </xpath>
         <xpath expr="//p[@name='payment_communication']" position="replace"/>
+        <xpath expr="//p[@name='payment_term']" position="replace"/>
+<!--            <strong t-field="o.invoice_payment_term_id.note"/>-->
+<!--        </xpath>-->
         <xpath expr="//div[@name='comment']" position="replace">
-            <div class="mt-5 mx-3" t-if="o.narration">
+            <div class="mt-5 mx-0" t-if="o.narration">
                 <strong>Invoice Terms and Conditions
                 </strong>
-                <p class="mb-1" t-field="o.narration" style="margin-left: 50px;"/>
+                <p class="mb-1" t-field="o.narration" style="border-top: 1px solid black; margin-top: 1px;"/>
             </div>
         </xpath>
 
