--- a/bista_purchase/views/account_move_views.xml
+++ b/bista_purchase/views/account_move_views.xml
@@ -9,7 +9,14 @@
             <xpath expr="//field[@name='narration']" position="attributes">
                 <attribute name="placeholder">Invoice Terms and Conditions</attribute>
             </xpath>
-
+            <xpath expr="//group[hasclass('oe_invoice_lines_tab')]" position="after">
+                <group name="invoice_pick_note"  class="mt-2 mt-md-0" style="word-wrap: break-word;">
+                    <group>
+                        <field name="invoice_pick_note" class="oe-bordered-editor"
+                               nolabel="1" placeholder="Notes" />
+                    </group>
+                </group>
+            </xpath>
         </field>
     </record>
 </odoo>
