--- a/bista_sale_multi_ship/report/shipment_report_view.xml
+++ b/bista_sale_multi_ship/report/shipment_report_view.xml
@@ -71,37 +71,37 @@
                 </t>
                 <t t-set="custom_information_block">
                     <div>
-                        <t t-if="doc.state in ['draft','sent','quote_approval','quote_confirm']">
-                            <strong>Quotation:</strong>
-                            <t t-esc="doc.name"/>
-                            <br/>
-                        </t>
-                        <t t-if="doc.state in ['sale','pending_for_approval','order_booked','credit_review','cancel','done']">
-                            <strong>Sale Order:</strong>
-                            <t t-esc="doc.name"/>
-                            <br/>
-                        </t>
-                        <t t-if="doc.state in ['draft','sent','quote_approval','quote_confirm']">
-                            <strong>Quotation Date:</strong>
-                            <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
-                            <br/>
-                        </t>
-                        <t t-if="doc.state in ['order_booked']">
-                            <strong>Booked order date:</strong>
-                            <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
-                            <br/>
-                        </t>
-                        <t t-if="doc.state  in ['sale','pending_for_approval','credit_review','cancel','done']">
-                            <strong>Order Date:</strong>
-                            <span t-esc="o.date_order" t-options='{"widget": "date"}'>
-                            </span>
-                            <br/>
-                        </t>
-                        <strong>Customer Ref:</strong>
-                        <t t-esc="doc.client_order_ref"/>
-                        <br/>
+<!--                        <t t-if="doc.state in ['draft','sent','quote_approval','quote_confirm']">-->
+<!--                            <strong>Quotation:</strong>-->
+<!--                            <t t-esc="doc.name"/>-->
+<!--                            <br/>-->
+<!--                        </t>-->
+<!--                        <t t-if="doc.state in ['sale','pending_for_approval','order_booked','credit_review','cancel','done']">-->
+<!--                            <strong>Sale Order:</strong>-->
+<!--                            <t t-esc="doc.name"/>-->
+<!--                            <br/>-->
+<!--                        </t>-->
+<!--                        <t t-if="doc.state in ['draft','sent','quote_approval','quote_confirm']">-->
+<!--                            <strong>Quotation Date:</strong>-->
+<!--                            <t t-esc="o.date_order" t-options='{"widget": "date"}'/>-->
+<!--                            <br/>-->
+<!--                        </t>-->
+<!--                        <t t-if="doc.state in ['order_booked']">-->
+<!--                            <strong>Booked order date:</strong>-->
+<!--                            <t t-esc="o.date_order" t-options='{"widget": "date"}'/>-->
+<!--                            <br/>-->
+<!--                        </t>-->
+<!--                        <t t-if="doc.state  in ['sale','pending_for_approval','credit_review','cancel','done']">-->
+<!--                            <strong>Order Date:</strong>-->
+<!--                            <span t-esc="o.date_order" t-options='{"widget": "date"}'>-->
+<!--                            </span>-->
+<!--                            <br/>-->
+<!--                        </t>-->
                         <strong>Valid Until:</strong>
                         <t t-esc="doc.validity_date" t-options='{"widget": "date"}'/>
+                        <br/>
+                        <strong>Customer Ref:</strong>
+                        <t t-esc="doc.client_order_ref"/>
                         <br/>
                         <strong>Salesperson:</strong>
                         <t t-esc="o.user_id.name"/>
@@ -251,7 +251,7 @@
                     </t>
                     <table style="border: 1px solid black; width: 26%; margin-left:74%;background-color: #CC5500;"
                            class="text-right">
-                        <tr>
+                        <tr style="background-color: #f56343;">
                             <td class="text-left"
                                 style="height:1px; border-left: 1px solid black; border-right: 1px solid black; width:180px; border-top: 1px solid black; color: black; padding-left:10px;">
                                 <strong>Subtotal</strong>
