--- a/bista_report_header_footer/report/report_header_footer_view.xml
+++ b/bista_report_header_footer/report/report_header_footer_view.xml
@@ -29,8 +29,8 @@
                 <div class="row mb-2 mt-0">
                     <div class="col-6">
                         <img t-if="company.logo" t-att-src="image_data_uri(company.logo)" alt="Logo"/>
-                        <div t-field="company.partner_id"
-                             t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'/>
+<!--                        <div t-field="company.partner_id"-->
+<!--                             t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'/>-->
                     </div>
                     <div name="report_info"
                          class="col-6 text-right mb4">
